tests/LiquidInf/Artificial/Neg/Divide.hs
module Divide where

{-@ divide :: Int -> Double @-}
divide :: Int -> Double
divide d = 1.0 / fromIntegral d